[project]
name = "odoo-addons-oca-account-reconcile"
version = "17.0.20240426.0"
dependencies = [
    "odoo-addon-account_mass_reconcile>=17.0dev,<17.1dev",
    "odoo-addon-account_reconcile_model_oca>=17.0dev,<17.1dev",
    "odoo-addon-account_reconcile_oca>=17.0dev,<17.1dev",
    "odoo-addon-account_statement_base>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
